--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -64,6 +64,24 @@ Welcome!
 <!-- Top Monitors -->
 <div class="row">
     <h2 class="fw-bold">Top Monitors</h2>
+    {% for product in products.top_monitors %}
+    <div class="col-md-6 col-6 col-lg-3 pb-3">
+        <div class="card h-100 text-center border-0">
+            <a href="#">
+                <img src="{{ product.image.url }}" alt="{{ product.name }}" class="card-img-top img-fluid">
+            </a>
+            <p class="card-body product-name mb-0">{{ product.name }}</p>
+            <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
+            <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+                    class="fa-solid fa-star star-rating text-warning"></i></p>
+            <p class="text-start ps-2"><a href="#" class="text-decoration-none text-muted fs-6 category-tag"><i
+                        class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
+            <div class="card-footer bg-white pt-2 border-0">
+                <a href="#" class="btn btn-success w-100">Add to bag</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
 </div>
 <!-- Top Storage -->
 <div class="row">
