feat: Add basic all products view and template from boutique ado

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -25,7 +25,7 @@
                     <li><a href="#" class="dropdown-item">By Rating</a></li>
                     <li><a href="#" class="dropdown-item">By Category</a></li>
                     <hr class="dropdown-divider">
-                    <li><a href="#" class="dropdown-item">All Products</a></li>
+                    <li><a href="{% url 'products' %}" class="dropdown-item">All Products</a></li>
                 </ul>
             </li>
 
