--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -6,19 +6,20 @@ Browse Our Store
 {% endblock %}
 
 {% block content %}
+        <h2 class="text-center fw-bold">
+            Products
+        </h2>
         <div class="row">
             <div class="col text-center mt-2">
-                <h2 class="fw-bold">Products</h2>
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                         <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
-                <hr class="w-50 mb-1">
             </div>
         </div>
         <div class="row">
-            <div class="product-container col-12">
+            <div class="col-12">
                 <div class="row mt-1 mb-2">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
@@ -47,43 +48,24 @@ Browse Our Store
                 <div class="row">
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card h-100 border-0">
-                                {% if product.image %}
+                            <div class="card h-100 text-center border-0">
                                 <a href="#">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    <img src="{{ product.image.url }}" alt="{{ product.name }}" class="card-img-top img-fluid">
                                 </a>
-                                {% else %}
-                                <a href="#">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                </a>
-                                {% endif %}
-                                <div class="card-body pb-0">
-                                    <p class="mb-0">{{ product.name }}</p>
-                                </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
-                                    <div class="row">
-                                        <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                                            {% if product.category %}
-                                            <p class="small mt-1 mb-0">
-                                                <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                                </a>
-                                            </p>
-                                            {% endif %}
-                                            {% if product.rating %}
-                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                                            {% else %}
-                                                <small class="text-muted">No Rating</small>
-                                            {% endif %}
-                                            {% if request.user.is_superuser %}
-                                            <small class="ml-3">
-                                                <a href="#">Edit</a>
-                                                <a href="#" class="text-danger">Delete</a>
-                                            </small>
-                                            {% endif %}
-                                        </div>
-                                    </div>
+                                <p class="card-body product-name mb-0">{{ product.name }}</p>
+                                <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
+                                <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+                                            class="fa-solid fa-star star-rating text-warning"></i></p>
+                                <p class="text-start ps-2"><a href="#" class="text-decoration-none text-muted fs-6 category-tag"><i
+                                            class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
+                                {% if request.user.is_superuser %}
+                                    <small class="ml-3">
+                                        <a href="#">Edit</a>
+                                        <a href="#" class="text-danger">Delete</a>
+                                    </small>
+                                {% endif %}    
+                                <div class="card-footer bg-white pt-2 border-0">
+                                    <a href="#" class="btn btn-success w-100">Add to bag</a>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +89,7 @@ Browse Our Store
                             <hr>
                         </div>
                         {% endif %}
-                    {% endfor%}
+                    {% endfor %}
                 </div>
             </div>
         </div>
