--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,10 @@ Welcome!
 <!-- Banner image -->
 <div class="row">
     <div class="col-12 text-center">
-        <a href="#"><img src="../../../media/home-splash-img.png" class="welcome-img"
-                alt="Shop the latest tech deals with A to PC"></a>
+        <a href="{% url 'products' %}" aria-label="Go to products page">
+            <img src="../../../media/home-splash-img.png" class="welcome-img"
+                alt="Shop the latest tech deals with A to PC">
+        </a>
     </div>
 </div>
 <!-- New Products -->
@@ -49,7 +51,7 @@ Welcome!
             <hr>
         </div>
     </div>
-    {% endif %}    
+    {% endif %}
     {% endfor %}
 </div>
 <div class="row justify-content-center d-none d-lg-flex">
