--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,8 +2,8 @@
 <div class="offcanvas offcanvas-start" id="main-nav">
     <div class="offcanvas-header">
         <a href="{% url 'home' %}" class="nav-link">
-            <img src="{% static '../media/logo-removebg.png' %}" class="logo-img offcanvas-title" id="offcanvasNavbarLabel"
-                alt="A to PC" aria-label="Go to home page">
+            <img src="{% static '../media/logo-removebg.png' %}" class="logo-img offcanvas-title"
+                id="offcanvasNavbarLabel" alt="A to PC" aria-label="Go to home page">
         </a>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
@@ -21,11 +21,15 @@
                     All Products
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="all-products-link">
-                    <li><a href="#" class="dropdown-item">By Price</a></li>
-                    <li><a href="#" class="dropdown-item">By Rating</a></li>
-                    <li><a href="#" class="dropdown-item">By Category</a></li>
+                    <li><a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item"
+                            aria-label="Go to products sorted by price">By Price</a></li>
+                    <li><a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item"
+                            aria-label="Go to products sorted by rating">By Rating</a></li>
+                    <li><a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item"
+                            aria-label="Go to products sorted by category">By Category</a></li>
                     <hr class="dropdown-divider">
-                    <li><a href="{% url 'products' %}" class="dropdown-item">All Products</a></li>
+                    <li><a href="{% url 'products' %}" class="dropdown-item" aria-label="Go to all Products page">All
+                            Products</a></li>
                 </ul>
             </li>
 
@@ -35,11 +39,16 @@
                     Peripherals
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="peripherals-link">
-                    <li><a href="#" class="dropdown-item">Keyboards</a></li>
-                    <li><a href="#" class="dropdown-item">Mice</a></li>
-                    <li><a href="#" class="dropdown-item">Headphones</a></li>
+                    <li><a href="{% url 'products' %}?category=keyboards" class="dropdown-item"
+                            aria-label="Go to keyboards page">Keyboards</a></li>
+                    <li><a href="{% url 'products' %}?category=mice" class="dropdown-item"
+                            aria-label="Go to mice page">Mice</a></li>
+                    <li><a href="{% url 'products' %}?category=headphones" class="dropdown-item"
+                            aria-label="Go to headphones page">Headphones</a></li>
                     <hr class="dropdown-divider">
-                    <li><a href="#" class="dropdown-item">All Peripherals</a></li>
+                    <li><a href="{% url 'products' %}?category=keyboards,mice,headphones" class="dropdown-item"
+                            aria-label="Go to all peripherals page">All
+                            Peripherals</a></li>
                 </ul>
             </li>
 
@@ -49,11 +58,15 @@
                     Monitors
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="monitors-link">
-                    <li><a href="#" class="dropdown-item">1080p</a></li>
-                    <li><a href="#" class="dropdown-item">1440p</a></li>
-                    <li><a href="#" class="dropdown-item">4k</a></li>
+                    <li><a href="{% url 'products' %}?category=1080p_monitors" class="dropdown-item"
+                            aria-label="Go to solid state drives page">1080p</a></li>
+                    <li><a href="{% url 'products' %}?category=1440p_monitors" class="dropdown-item"
+                            aria-label="Go to 1440p monitors page">1440p</a></li>
+                    <li><a href="{% url 'products' %}?category=4k_monitors" class="dropdown-item"
+                            aria-label="Go to 4k monitors page">4k</a></li>
                     <hr class="dropdown-divider">
-                    <li><a href="#" class="dropdown-item">All Monitors</a></li>
+                    <li><a href="{% url 'products' %}?category=1080p_monitors,1440p_monitors,4k_monitors"
+                            class="dropdown-item" aria-label="Go to all monitors page">All Monitors</a></li>
                 </ul>
             </li>
 
@@ -63,10 +76,15 @@
                     Storage
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="storage-link">
-                    <li><a href="#" class="dropdown-item">Hard Drives</a></li>
-                    <li><a href="#" class="dropdown-item">Solid State Drives</a></li>
+                    <li><a href="{% url 'products' %}?category=hard_drives" class="dropdown-item"
+                            aria-label="Go to hard drives page">Hard Drives</a></li>
+                    <li><a href="{% url 'products' %}?category=solid_state_drives" class="dropdown-item"
+                            aria-label="Go to solid state drives page">Solid State
+                            Drives</a></li>
                     <hr class="dropdown-divider">
-                    <li><a href="#" class="dropdown-item">All Storage</a></li>
+                    <li><a href="{% url 'products' %}?category=hard_drives,solid_state_drives" class="dropdown-item"
+                            aria-label="Go to all storage page">All
+                            Storage</a></li>
                 </ul>
             </li>
 
@@ -76,16 +94,20 @@
                     Deals
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="deals-link">
-                    <li><a href="#" class="dropdown-item">Latest Deals</a></li>
-                    <li><a href="#" class="dropdown-item">Clearance</a></li>
+                    <li><a href="{% url 'products' %}?category=latest_deals" class="dropdown-item"
+                            aria-label="Go to latest deals page">Latest Deals</a></li>
+                    <li><a href="{% url 'products' %}?category=clearance" class="dropdown-item"
+                            aria-label="Go to products on clearance page">Clearance</a></li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a href="#" class="dropdown-item">All Deals</a></li>
+                    <li><a href="{% url 'products' %}?category=latest_deals,clearance" class="dropdown-item"
+                            aria-label="Go to all deals page">All Deals</a></li>
                 </ul>
             </li>
         </ul>
-        <form class="d-flex mt-3 nav-item d-md-none" role="search" method="get" action="">
+
+        <form class="d-flex mt-3 nav-item d-md-none" role="search" method="get" action="{% url 'products' %}">
             <div class="input-group border-black nav-item">
                 <input class="form-control" type="search" name="q" placeholder="Search for products"
                     aria-label="Search">
