--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -8,7 +8,7 @@
         </div>
     </a>
     <div class="dropdown-menu rounded-0 border-0 w-100 p-3 my-0" aria-labelledby="mobile-search">
-        <form class="d-flex nav-item d-md-none" role="search" method="get" action="">
+        <form class="d-flex nav-item d-md-none" role="search" method="get" action="{% url 'products' %}">
             <div class="input-group border-black nav-item">
                 <input class="form-control" type="search" name="q" placeholder="Search for products"
                     aria-label="Search">
