--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -65,11 +65,12 @@ Browse Our Store
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 text-center border-0">
-                                <a href="#">
+                                <a href="{% url 'product_detail' product.id %}">
                                     <img src="{{ product.image.url }}" alt="{{ product.name }}" class="card-img-top img-fluid">
                                 </a>
                                 <p class="card-body product-name mb-0">{{ product.name }}</p>
                                 <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
+                                
                                 <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
                                             class="fa-solid fa-star star-rating text-warning"></i></p>
                                 <p class="text-start ps-2 mb-0"><a href="#" class="text-decoration-none text-muted fs-6 category-tag"><i
