--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block extra_title %}
 {{ product.name }}
@@ -7,37 +8,40 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-        <div class="image-container my-5">
+    <div class="col-12 col-md-6 col-lg-6">
+        <div class="image-container mt-2">
             <a href="{{ product.image.url }}" target="_blank">
-                <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
             </a>
         </div>
     </div>
-    <div class="col-12 col-md-6 col-lg-4">
+    <div class="col-12 col-md-6 col-lg-6">
         <div class="product-details-container mb-5 mt-md-5">
-            <p class="mb-0">{{ product.name }}</p>
-            <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+            <p class="mb-0 fw-bold fs-4">{{ product.name }}</p>
+            <small class="text-muted">SKU: {{ product.sku }}</small>
+            <p class="lead mb-0 text-left fw-bold">£{{ product.price }}</p>
             {% if product.category %}
             <p class="small mt-1 mb-0">
-                <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                <a class="text-muted text-decoration-none category-tag"
+                    href="{% url 'products' %}?category={{ product.category.name }}">
+                    <i class="fas fa-tag mr-1 pe-1"></i>{{ product.category.friendly_name }}
                 </a>
             </p>
             {% endif %}
             {% if product.average_rating %}
-            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.average_rating }} / 5</small>
+            <small><i class="fas fa-star mr-1 text-warning"></i>{{ product.average_rating }} / 5</small>
             {% else %}
             <small class="text-muted">No Rating</small>
             {% endif %}
             {% if request.user.is_superuser %}
-            <small class="ml-3">
-                <a href="#">Edit</a>
+            <small class="ms-3">
+                <a href="#" class="text-decoration-none">Edit</a>
                 |
-                <a href="#" class="text-danger">Delete</a>
+                <a href="#" class="text-danger text-decoration-none">Delete</a>
             </small>
             {% endif %}
-            <p class="mt-3">{{ product.description }}</p>
+            <hr>
+            <p class="mt-1">{{ product.description }}</p>
             <form class="form" action="#" method="POST">
                 {% csrf_token %}
                 <div class="col-12">
@@ -45,8 +49,8 @@
                     <div class="form-group w-50">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <button class="decrement-qty btn btn-black rounded-0" data-item_id="{{ product.id }}"
-                                    id="decrement-qty_{{ product.id }}">
+                                <button class="decrement-qty btn border border-black rounded-0"
+                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                     <span class="icon">
                                         <i class="fas fa-minus"></i>
                                     </span>
@@ -55,8 +59,8 @@
                             <input class="form-control qty_input" type="number" name="quantity" value="1" min="1"
                                 max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                             <div class="input-group-append">
-                                <button class="increment-qty btn btn-black rounded-0" data-item_id="{{ product.id }}"
-                                    id="increment-qty_{{ product.id }}">
+                                <button class="increment-qty btn border border-black rounded-0"
+                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                     <span class="icon">
                                         <i class="fas fa-plus"></i>
                                     </span>
@@ -67,19 +71,71 @@
                 </div>
 
                 <div class="col{% if s %}-12 mt-2{% endif %}">
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                    <a href="#" class="btn btn-primary mt-5">
                         <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
+                            <i class="fa-solid fa-heart fa-lg pe-1"></i>
                         </span>
-                        <span class="text-uppercase">Keep Shopping</span>
+                        Wishlist
                     </a>
-                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                    <input type="submit" class="btn btn-success text-uppercase mt-5" value="Add to Bag">
                 </div>
                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
         </div>
         </form>
     </div>
 </div>
+<hr>
+<div class="row">
+    <div class="col-12">
+        <h3 class="text-start fw-bold fs-4">Technical Specification</h3>
+        {{ product.specification }}
+    </div>
 </div>
+<hr>
+{% if user.is_authenticated %}
+<div class="row">
+    <h4 class="text-start fw-semibold fs-4">Review this Product</h4>
+    <div class="col-12 pb-0">
+        <h5>Reviewing as: <strong>{{ user.username }}</strong></h3>
+            <form action="{% url 'product_detail' product.id %}" method="post" class="text-start">
+                {{ review_form | crispy }}
+                {% csrf_token %}
+                <button type="submit" class="btn btn-dark mt-2">Submit</button>
+            </form>
+            <hr>
+    </div>
+</div>
+<div class="row">
+    <h4 class="text-start fw-semibold">Reviews</h4>
+    {% if reviews.count == 0 %}
+    <h5 class="text-start fw-semibold">No Reviews Yet!</h5>
+    {% else %}
+    <div class="col-12">
+        {% for review in reviews %}
+        <div class="card pb-3">
+            <div class="card-body">
+                <div class="row">
+                    <h5 class="col-md-2 col-6 fw-semibold">{{ review.author }}</h5>
+                    <h5 class="col-md-2 col-6">Rating: {{ review.rating }} <i
+                            class="fa-solid fa-star text-warning"></i></h5>
+                    <h5 class="col-md-2 col-6">Created: {{ review.created_on }}</h5>
+                    <h5 class="col-md-2 col-6">Edited: {{ review.edited_on }}</h5>
+                    {% if request.user == review.author or request.user.is_superuser %}
+                    <h5 class="col-md-2 col-6"><a href="#">Edit</a></h5>
+                    <h5 class="col-md-2 col-6 text-danger"><a href="#">Delete</a></h5>
+                    {% endif %}
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-12">
+                        {{ review.review_content }}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+</div>
+{% endif %}
 {% endblock %}
-
