--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -70,15 +70,19 @@ Browse Our Store
                                 </a>
                                 <p class="card-body product-name mb-0">{{ product.name }}</p>
                                 <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
-                                
+                                {% if product.average_rating %}
                                 <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
                                             class="fa-solid fa-star star-rating text-warning"></i></p>
+                                {% else %}
+                                <small class="text-muted text-start ps-2">No Rating</small>
+                                {% endif %}
                                 <p class="text-start ps-2 mb-0"><a href="#" class="text-decoration-none text-muted fs-6 category-tag"><i
                                             class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
                                 {% if request.user.is_superuser %}
                                     <small>
-                                        <a href="#">Edit</a>
-                                        <a href="#" class="text-danger">Delete</a>
+                                        <a href="#" class="text-decoration-none">Edit</a>
+                                        |
+                                        <a href="#" class="text-danger text-decoration-none">Delete</a>
                                     </small>
                                 {% endif %}    
                                 <div class="card-footer bg-white pt-2 border-0">
