feat: Add view to add reviews to product detail view and fix average rating

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -40,9 +40,9 @@ Welcome!
                         class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
             {% if request.user.is_superuser %}
             <small>
-                <a href="#">Edit</a>
+                <a href="#" class="text-decoration-none">Edit</a>
                 |
-                <a href="#" class="text-danger">Delete</a>
+                <a href="#" class="text-danger text-decoration-none">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
@@ -85,8 +85,9 @@ Welcome!
                         class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
             {% if request.user.is_superuser %}
             <small>
-                <a href="#">Edit</a>
-                <a href="#" class="text-danger">Delete</a>
+                <a href="#" class="text-decoration-none">Edit</a>
+                |
+                <a href="#" class="text-danger text-decoration-none">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
@@ -129,8 +130,9 @@ Welcome!
                         class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
             {% if request.user.is_superuser %}
             <small>
-                <a href="#">Edit</a>
-                <a href="#" class="text-danger">Delete</a>
+                <a href="#" class="text-decoration-none">Edit</a>
+                |
+                <a href="#" class="text-danger text-decoration-none">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
@@ -173,8 +175,9 @@ Welcome!
                         class="fa-solid fa-tags mr-2"></i> {{ product.category.friendly_name }}</a></p>
             {% if request.user.is_superuser %}
             <small>
-                <a href="#">Edit</a>
-                <a href="#" class="text-danger">Delete</a>
+                <a href="#" class="text-decoration-none">Edit</a>
+                |
+                <a href="#" class="text-danger text-decoration-none">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
