--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -1,25 +1,15 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block extra_title %}
-{{ Add a Product }}
-{% endblock %}
-
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
+Add a Product
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
         <div class="row">
             <div class="col-12 col-md-6">
-                <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
+                <h2 class="fw-bold mb-4 text-center">Product Management</h2>
                 <h5 class="text-muted">Add a Product</h5>
                 <hr>
             </div>
@@ -36,14 +26,13 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
-                    <div class="text-right">
-                        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                    <div class="text-end">
+                        <a href="{% url 'products' %}" class="btn btn-danger">Cancel</a>
+                        <button class="btn btn-success" type="submit">Add Product</button>
                     </div>
                 </form>
             </div>
         </div>
-    </div>
 {% endblock %}
 
 {% block postloadjs %}
