--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -8,25 +8,25 @@ Add a Product
 
 {% block content %}
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12">
                 <h2 class="fw-bold mb-4 text-center">Product Management</h2>
-                <h5 class="text-muted">Add a Product</h5>
-                <hr>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12 col-md-6">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <h5 class="text-muted">Add a Product to the Store</h5>
+                <hr>
                 <form action="{% url 'add_product' %}" method="POST" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
+                            {{ field | as_crispy_field | safe }}
                         {% else %}
-                            {{ field }}
+                            {{ field | safe }}
                         {% endif %}
                     {% endfor %}
-                    <div class="text-end">
+                    <div class="text-center">
                         <a href="{% url 'products' %}" class="btn btn-danger">Cancel</a>
                         <button class="btn btn-success" type="submit">Add Product</button>
                     </div>
