--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -40,7 +40,7 @@
         {% if request.user.is_authenticated %}
         {% if request.user.is_superuser %}
             <li><a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a></li>
-            <li><a href="#" class="dropdown-item">Product Management</a></li>
+            <li><a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a></li>
         {% endif %}
             <li><a href="{% url 'profile' user.profile.id %}" class="dropdown-item">My Profile</a></li>
             <li><a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a></li>
