--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -21,9 +21,9 @@ Add a Product
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.name != 'image' %}
-                            {{ field | as_crispy_field | safe }}
+                            {{ field | as_crispy_field }}
                         {% else %}
-                            {{ field | safe }}
+                            {{ field }}
                         {% endif %}
                     {% endfor %}
                     <div class="text-center">
