--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -24,22 +24,22 @@
             <p class="lead mb-0 text-left fw-bold">£{{ product.price }}</p>
             {% if product.category %}
             <p class="small mt-1 mb-0">
-                <a class="text-muted text-decoration-none category-tag"
+                <a class="text-muted category-tag"
                     href="{% url 'products' %}?category={{ product.category.name }}">
                     <i class="fas fa-tag mr-1 pe-1"></i>{{ product.category.friendly_name }}
                 </a>
             </p>
             {% endif %}
             {% if product.average_rating %}
-            <small><i class="fas fa-star mr-1 text-warning"></i>{{ product.average_rating }} / 5 ({{ reviews.count }})</small>
+            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.average_rating }} / 5 ({{ reviews.count }})</small>
             {% else %}
             <small class="text-muted">No Rating</small>
             {% endif %}
             {% if request.user.is_superuser %}
             <small class="ms-3">
-                <a href="#" class="text-decoration-none">Edit</a>
+                <a href="{% url 'edit_product' product.id %}">Edit</a>
                 |
-                <a href="#" class="text-danger text-decoration-none">Delete</a>
+                <a href="#" class="text-danger">Delete</a>
             </small>
             {% endif %}
             <hr>
@@ -124,14 +124,14 @@
                     <p class="col-md-2 col-6"><span class="fw-bold">Created:</span> {{ review.created_on }}</p>
                     <p class="col-md-2 col-6"><span class="fw-bold">Edited:</span> {{ review.edited_on }}</p>
                     {% if request.user == review.author or request.user.is_superuser %}
-                    <p class="col-md-2 col-6"><a href="#" class="text-decoration-none">Edit</a></p>
-                    <p class="col-md-2 col-6"><a href="#" class="text-decoration-none text-danger">Delete</a></p>
+                    <p class="col-md-2 col-6"><a href="#" class="">Edit</a></p>
+                    <p class="col-md-2 col-6"><a href="#" class=" text-danger">Delete</a></p>
                     {% endif %}
                 </div>
                 <hr>
                 <div class="row">
                     <div class="col-12">
-                        {{ review.review_content }}
+                        {{ review.review_content | linebreaks }}
                     </div>
                 </div>
             </div>
