--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -39,7 +39,7 @@
             <small class="ms-3">
                 <a href="{% url 'edit_product' product.id %}">Edit</a>
                 |
-                <a href="#" class="text-danger">Delete</a>
+                <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
             </small>
             {% endif %}
             <hr>
