fix: Fix review form being posted when selecting item quantity

--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -40,7 +40,7 @@ Delete Product
             </p>
             {% endif %}
             {% if product.average_rating %}
-            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.average_rating }} / 5 ({{ reviews.count }})</small>
+            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.average_rating }} / 5</small>
             {% else %}
             <small class="text-muted">No Rating</small>
             {% endif %}
