--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -42,7 +42,7 @@ Welcome!
             <small>
                 <a href="{% url 'edit_product' product.id %}">Edit</a>
                 |
-                <a href="#" class="text-danger">Delete</a>
+                <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
@@ -87,7 +87,7 @@ Welcome!
             <small>
                 <a href="{% url 'edit_product' product.id %}">Edit</a>
                 |
-                <a href="#" class="text-danger">Delete</a>
+                <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
@@ -132,7 +132,7 @@ Welcome!
             <small>
                 <a href="{% url 'edit_product' product.id %}">Edit</a>
                 |
-                <a href="#" class="text-danger">Delete</a>
+                <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
@@ -177,11 +177,11 @@ Welcome!
             <small>
                 <a href="{% url 'edit_product' product.id %}">Edit</a>
                 |
-                <a href="#" class="text-danger">Delete</a>
+                <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
             </small>
             {% endif %}
             <div class="card-footer bg-white pt-2 border-0">
-                <a href="#" class="btn btn-success w-100">Add to bag</a>
+                <a href="" class="btn btn-success w-100">Add to bag</a>
             </div>
         </div>
     </div>
