--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -102,7 +102,7 @@
             <form action="{% url 'product_detail' product.id %}" method="post" class="text-start">
                 {{ review_form | crispy }}
                 {% csrf_token %}
-                <button type="submit" class="btn btn-dark mt-2">Submit</button>
+                <button type="submit" name="review-submit" class="btn btn-dark mt-2">Submit</button>
             </form>
             <hr>
     </div>
